# openclawpack

./: README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-core-commands/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md
.planning/phases/02.1-integration-fixes/: 02.1-01-PLAN.md  02.1-02-PLAN.md  02.1-02-SUMMARY.md  2.1-RESEARCH.md
.planning/phases/03-reliability/: 03-02-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/plans/: 2026-02-22-gsd-router-plugin-design.md  2026-02-22-gsd-router-plugin-plan.md
openclawpack-plugin/: openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
openclawpack-plugin/src/: exec.ts  index.ts  tools.ts
src/openclawpack/: __init__.py  api.py  cli.py
tests/: conftest.py  test_api.py  test_cli.py
tests/test_commands/: test_answers.py  test_engine.py  test_execute_phase.py  test_new_project.py  test_plan_phase.py  test_projects.py  test_status.py
tests/test_output/: test_schema.py
tests/test_state/: __init__.py  test_models.py  test_parser.py  test_reader.py  test_registry.py
tests/test_transport/: __init__.py  test_client.py  test_errors.py
(+54 files in other folders)
